# sym2

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .lldbinit  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py
benchmarks/: CMakeLists.txt  mixed-arithmetic.cpp  queries.cpp
bindings/: CMakeLists.txt
bindings/chibi/: CMakeLists.txt  chibibridge.cpp  chibiconverter.cpp  chibiconverter.h
cmake/: Compiler.cmake  Flags.cmake  RunChibi.cmake  Sanitizer.cmake  chibi.sh.in  linenoise.cmake  lldb.start.in  s7.cmake
conan/boost-headers/: conanfile.py
conan/chibi-scheme/: conanfile.py
conan/cmake-coverage/: conanfile.py
docs/: implementation.md  testing.md
include/sym2/: allocator.h  autosimpl.h  blob.h  childiterator.h  compositetype.h  constants.h  domainflag.h  doublefctptr.h  eval.h  expr.h  exprview.h  functions.h  functionview.h  get.h  operandsview.h  polynomial.h  predicateexpr.h  predicates.h  printengine.h  query.h  smallrational.h  sym2.h  symbolflag.h  var.h
lib/benchmark/: conanfile.py
lib/benchmark/test_package/: conanfile.py  main.cpp
lib/boost-headers/: conanfile.py
lib/boost-headers/test_package/: CMakeLists.txt  conanfile.py  main.cpp
lib/chibi-scheme/: conanfile.py
lib/chibi-scheme/test_package/: conanfile.py  main.cpp  main.scm
lib/cmake-coverage/: conanfile.py
lib/doctest/: conanfile.py
lib/doctest/test_package/: CMakeLists.txt  main.cpp
lib/ginac/: conanfile.py
lib/ginac/test_package/: main.cpp
misc/: cpp.snippets  doctest.snippets  lldbtarget.py  malloc.d  pretty.py  vimrc
src/: CMakeLists.txt  allocator.cpp  allocator.h  autosimpl.cpp  autosimpl.h  binaryfct.h  blob.cpp  blob.h  canonical.cpp  canonical.h  chibibridge.cpp  chibiconverter.cpp  chibiconverter.h  chibiutils.cpp  chibiutils.h  childiterator.cpp  childiterator.h  cohenautosimpl.cpp  cohenautosimpl.h  constants.h  eval.h  expr.cpp  expr.h  exprliteral.h  exprview.cpp  functions.cpp  get.cpp  get.h  int.h  largeint.h  largerational.h  logarithm.cpp  logarithm.h  number.cpp  number.h  numberarithmetic.cpp  numberarithmetic.h  numeric.cpp  numeric.h  operand.cpp  (+45 more)
src/lowlevel/: access.cpp  access.h  blob.cpp  blob.h  blobapi.h  childiterator.cpp  expr.cpp  exprliteral.cpp  exprview.cpp  get.cpp  predicates.cpp  query.cpp  view.cpp
tests/: CMakeLists.txt  abc.h  order.scm  poly.scm  power.scm  prettydebug-expected.txt  prettydebug.cpp  prettydebug.lldb  printer.scm  product.scm  query.scm  roundtrip.scm  s7bridge.cpp  s7bridge.h  s7converter.cpp  s7converter.h  s7repl.cpp  sum.scm  testassumptions.cpp  testcanonical.cpp  testchilditerator.cpp  testequality.cpp  testeval.cpp  testexpr.cpp  testfunctionview.cpp  testget.cpp  testlocalalloc.cpp  testoperands.cpp  testoperandsview.cpp  testorderrelationimpl.cpp  testpower.cpp  testpredicates.cpp  testquery.cpp  testtypetags.cpp  testutils.h  testvar.cpp  testview.cpp
tests/lowlevel/: testassumptions.cpp  testexpr.cpp  testview.cpp
